Bubble command so it gets directed.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -159,7 +159,7 @@
   \Repo[south west][repo][simple]{Canvas.south west}{
   }
 
-  \Command[base]{0, 0}{git init}
+  \Command[base][][.5][5]{0, 0}{git init}
 
 } % ENDSLIDE
 
