--- a/tex/files.tex
+++ b/tex/files.tex
@@ -2,19 +2,22 @@
 % Not everything is possible yet, but it's maybe useful at least.
 \tikzmath{
   \FileNameScale = 1.9;
-  \FileSpacing = 3;
+  \FileSpacing = 15;
+  \IntoFileTreeSpacing = 15;
   \IconSize = 14;
 }
-\tikzset{file icon/.style 2 args={
-  line width=1.5,
-  rounded corners,
-  line cap=round,
-  every path/.style={fill=#1, draw=#2},
-  },
+\tikzset{
+  file icon/.style 2 args={
+    line width=1.5,
+    rounded corners,
+    line cap=round,
+    every path/.style={fill=#1, draw=#2},
+    },
   file icon +/.style={file icon={#1}{plus}},
   file icon -/.style={file icon={#1}{minus}},
   file icon 0/.style={file icon={#1}{unchanged}},
   file icon m/.style={file icon={#1}{modified}},
+  file tree line/.style={line width=1.5, line cap=round},
 }
 
 % Pad icons to given width.
@@ -50,83 +53,85 @@
   }
 }}}
 
-\makeatletter
+% Insert file/folder icon with a name and correct modification status.
+% Type contains keywords like 'file|folder' and 'last' checked with \IfSubStr.
+% 'mod' is either '0+-m' TODO: c for 'conflict'.
+% [type][mode]{location}{name}{filename}
+\NewDocumentCommand{\FileLine}{ O{file} O{0} m m m }{{
 
-% Label file or folder with a name.
-% [keys]{icon-location}{filename}
-\define@boolkey{NameFile}[]{file}[true]{}
-\define@boolkey{NameFile}[]{folder}[true]{}
-\define@cmdkey{NameFile}[]{mode}[0]{}
-\presetkeys{NameFile}{mode}{}
-\NewDocumentCommand{\NameFile}{ O{file} m m }{{
-  \setkeys{NameFile}{#1}
-  \node[anchor=base west, scale=\FileNameScale, \mode] (file-label)
-    at ($(#2.south east) + (3, \iffile 5\fi\iffolder 3\fi)$)
-    {\tt#3\iffolder/\fi};
-  \edef\mode{\mode} % For some reason :\
-  \ifdefstring{\mode}{0}{}{
-    \node[anchor=base west, right=\SignOffset of file-label]
-      {\ifdefstring{\mode}{m}{\Tilde}
-      {\ifdefstring{\mode}{+}{\Plus}
-      {\ifdefstring{\mode}{-}{\Minus}
-      {[\mode]}}}};}
+  % Icon.
+  \AutomaticCoordinates{#4}{#3}
+  \node[anchor=north west,
+        alias=\LatestFileTree-#4-icon] (#4-icon) at (#4)
+    {\IfSubStr{#1}{file}{\File[#2]}{\Folder[#2]}};
+
+  % Filename.
+  \IfSubStr{#1}{file}{\coordinate (offset) at (3, 5);}
+                     {\coordinate (offset) at (3, 3);}
+  \node[anchor=base west, scale=\FileNameScale, #2,
+        alias=\LatestFileTree-#4-filename] (#4-filename)
+    at ($(#4-icon.south east) + (offset)$)
+    {\tt#5\IfSubStr{#1}{folder}{/}{}};
+
+  % Status sign.
+  \ifdefstring{#2}{0}{}{
+    \node[anchor=base west, right=\SignOffset of #4-filename]
+      {\ifdefstring{#2}{m}{\Tilde}
+      {\ifdefstring{#2}{+}{\Plus}
+      {\ifdefstring{#2}{-}{\Minus}
+      {[#2]}}}};} % (fallback to writing unexpected mode literally)
+
 }}
 
-% Position first file in the tree.
-% [keys]{position}{name}{filename}
-\define@boolkey{FirstFile}[]{file}[true]{}
-\define@boolkey{FirstFile}[]{folder}[true]{}
-\define@cmdkey{FirstFile}[]{mod}[0]{} % for some reason recurses with NameFile@mode
-\presetkeys{FirstFile}{mod}{}
-\NewDocumentCommand{\FirstFile}{ O{file} m m m }{{
-  \setkeys{FirstFile}{#1}
-  \def\name{#3}
-  \node[anchor=north west] (\name) at (#2)
-    {\iffile\File[\mod]\fi\iffolder\Folder[\mod]\fi};
-  \NameFile[\iffolder folder\fi\iffile file\fi, mode=\mod]{\name}{#4}
-}}
+% Chain files together, like commits in the repo.
+% [anchor][name]{location}{type/mod/name/filename list}
+\NewDocumentCommand{\FileTree}{ O{north west} O{files} m m }{
 
-% Step into folder hierarchy.
-% [keys]{parent-icon-location}{name}{filename}
-\define@boolkey{FirstChild}[]{file}[true]{}
-\define@boolkey{FirstChild}[]{folder}[true]{}
-\define@cmdkey{FirstChild}[]{mod}[0]{}
-\define@boolkey{FirstChild}[]{last}[true]{}
-\presetkeys{FirstChild}{mod}{}
-\NewDocumentCommand{\FirstChild}{ O{file} m m m }{{
-  \setkeys{FirstChild}{#1}
-  \def\name{#3}
-  \node[below=\FileSpacing of #2.south east, anchor=north west] (\name) {%
-    \iffolder\Folder[\mod]\fi\iffile\File[\mod]\fi};
-  \NameFile[\iffolder folder\fi\iffile file\fi, mode=\mod]{\name}{#4}
-  \coordinate (\name-parent-slot) at ($(#2.south) + (-1, -2)$);
-  \coordinate[left=2 of \name.base west] (\name-slot);
-  \coordinate (\name-branch) at (\name-parent-slot |- \name-slot);
-  \draw[file tree line, \iflast\mod\fi] (\name-parent-slot) -- (\name-branch);
-  \draw[file tree line, \mod] (\name-branch) -- (\name-slot);
-}}
+  % Update this global variable so that files icons, names, signs etc.
+  % can be aliased with (filetreename-nodename) in addition to just (nodename).
+  \def\LatestFileTree{#2}
 
-% Append a new item to the current folder.
-% [keys]{parent-icon-location}{name}{filename}
-\define@boolkey{AppendSibling}[]{file}[true]{}
-\define@boolkey{AppendSibling}[]{folder}[true]{}
-\define@boolkey{AppendSibling}[]{connect}[true]{}
-\define@boolkey{AppendSibling}[]{last}[true]{}
-\define@cmdkey{AppendSibling}[]{mod}[0]{}
-\presetkeys{AppendSibling}{mod}{}
-\NewDocumentCommand{\AppendSibling}{ O{file} m m m }{{
-  \setkeys{AppendSibling}{#1}
-  \def\name{#3}
-  \node[below=\FileSpacing of #2.south, anchor=north] (\name)
-    {\iffolder\Folder[\mod]\fi\iffile\File[\mod]\fi};
-  \NameFile[\iffile file\fi\iffolder folder\fi, mode=\mod]{\name}{#4}
-  \ifconnect
-    \coordinate (\name-sibling-slot) at (#2-branch);
-    \coordinate[left=2 of \name.base west] (\name-slot);
-    \coordinate (\name-branch) at (\name-sibling-slot |- \name-slot);
-    \draw[file tree line, \iflast\mod\fi] (\name-sibling-slot) -- (\name-branch);
-    \draw[file tree line, \mod] (\name-branch) -- (\name-slot);
-  \fi
-}}
+  \AutomaticCoordinates{filetreeloc}{#3}
+  \node[anchor=#1] (#2) at (filetreeloc) {\tikz[remember picture]{%
+    \foreach \type/\mod/\name/\filename [count=\i, remember=\name as \lastname]
+             in {#4}{\ifcsempty{filename}{}{%
+      \ifnumcomp{\i}{=}{1}{
+        % Keep track of current icon position.
+        \coordinate (current) at (0, 0);
+        \FileLine[\type][\mod]{current}{\name}{\filename}
+      }{
+        \coordinate[below=\FileSpacing of current] (current);
+        % type with:
+        %   'stepin' to enter into last folder.
+        %   'connect' to append sibling into currently 'stepped in' folder.
+        %   'last' to mark last sibling within a 'steeped in' folder.
+        % TODO: 'step out' and continuing outer line within sub-subfolders.
+        \IfSubStr{\type}{stepin}{
+          \coordinate[right=\IntoFileTreeSpacing of current] (current);
+        }{}
+        \FileLine[\type][\mod]{current}{\name}{\filename}
+        \IfSubStr{\type}{stepin}{%
+          % First parenting line within the folder.
+          \coordinate[below=2 of \lastname-icon.south] (s);
+        }{\IfSubStr{\type}{connect}{%
+          % Assumes an 'anchor' already exists.
+          \coordinate (s) at (anchor);
+        }{}}
+        \ifboolexpr{ test {\IfSubStr{\type}{stepin}}
+                  or test {\IfSubStr{\type}{connect}} }{
+          % Draw the actual line, creating 'anchor' for next time.
+          \coordinate[left=3 of \name-icon.west] (e);
+          \coordinate (anchor) at (s|-e);
+          % Only color whole line for last items in the chain.
+          \IfSubStr{\type}{last}{
+            \draw[file tree line, \mod] (s) -- (anchor) -- (e);
+          }{
+            \draw[file tree line] (s) -- (anchor);
+            \draw[file tree line, \mod] (anchor) -- (e);
+          }
+        }{}
+      }
+    }}
+  }};
 
-\makeatother
+}
