Calzone vs. Marinara.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -59,6 +59,8 @@
   Regina/regina.jpg,
   Diavola/diavola.jpg,
   Capricciosa/capricciosa.png,
+  Calzone/calzone.png,
+  Marinara/marinara.jpg,
   MyMachine/my_machine.png,
   TheirMachine/their_machine.png,
   PullRequestButton/pull_request_button.jpg,
