--- a/tex/diff.tex
+++ b/tex/diff.tex
@@ -6,9 +6,7 @@
   \FileNameMargins = 2;
   \CodeScale = 1.6;
   \CodeMargins = 2;
-  \CodeLineSpacing = 5;
   \SignOffset = 3;
-  \DiffFilesSpacing = 8;
 }
 \colorlet{plus}{Green5}
 \colorlet{minus}{Red5}
@@ -57,23 +55,24 @@
 }}
 \newcommand{\Tilde}{\usebox{\TildeBox}}
 
-% [mode][anchor][name]{location}{name}{mod/lines}
-\NewDocumentCommand{\Diff}{ O{0} O{center} O{file} m m m }{
+% [mode][anchor][name][line spacing]{location}{name}{mod/lines}
+\NewDocumentCommand{\Diff}{ O{0} O{center} O{file} O{5} m m m }{
   % Not exactly the corner we expect, but at least the one of first line.
 
-  \node[anchor=#2] (#3) at (#4) {\tikz{
+  \AutomaticCoordinates{#3}{#5}
+  \node[anchor=#2] (#3) at (#3) {\tikz{
 
     % Scope the lines to calculate their bounding box.
       \begin{scope}[local bounding box=fileview,
                     every node/.style={scale=\CodeScale}]
 
-        \foreach \sign/\line [count=\i] in {#6} {\ifcsempty{sign}{}{
+        \foreach \sign/\line [count=\i] in {#7} {\ifcsempty{sign}{}{
           % First line has special positionning.
             \ifnumcomp{\i}{=}{1}{
               \node[anchor=north west,\sign] (line-1) {\tt \line};
             }{
               \tikzmath{\prev = int(\i - 1);}
-              \node[below=\CodeLineSpacing of line-\prev.base west, \sign,
+              \node[below=#4 of line-\prev.base west, \sign,
                 anchor=base west]
                   (line-\i) {\tt \line};
             }
@@ -90,7 +89,7 @@
     % Setup file name label.
       \node[above=\FileNameMargins+\CodeMargins of line-1.north west,
       scale=\FileNameScale, anchor=south west, #1]
-        (filename) {\tt #5};
+        (filename) {\tt #6};
     \coordinate (pad) at (\FileNameMargins-\eps, \FileNameMargins);
     \coordinate (lower) at ($(filename.south west) - (pad)$);
     \coordinate (upper) at ($(filename.north east) + (pad)$);
@@ -101,7 +100,7 @@
     }
 
     % Second pass to append diff signs.
-    \foreach \sign/\line [count=\i] in {#6} {\ifcsempty{sign}{}{
+    \foreach \sign/\line [count=\i] in {#7} {\ifcsempty{sign}{}{
       \node[left=\SignOffset of line-\i.base west, anchor=base east]
         {\ifdefstring{\sign}{m}{\Tilde}
         {\ifdefstring{\sign}{+}{\Plus}
