Harmonize. Highlight git keywords. Simplify APIs.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -144,7 +144,7 @@
 } % ENDSLIDE
 
 % SLIDE Pizzas
-\renewcommand{\TitleText}{The Pizzas repo}
+\renewcommand{\TitleText}{The Pizzas Repository}
 \renewcommand{\SubTitleText}{Crafting your first commits}
 \renewcommand{\PageNumText}{2}
 \renewcommand{\Progress}{2/4}
